--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "open": "^9.1.0"
   },
   "name": "leaguetest",
   "type": "module",
